--- a/Groter.css
+++ b/Groter.css
@@ -1,3 +1,3 @@
 body {
-  font-size: 22px; /* Of 1.5em, of 150%, afhankelijk van voorkeur */
+  font-size: 150%; /* Of 1.5em, of 150%, afhankelijk van voorkeur */
 }
